bin/testsuite/tests/compiler/src/errors/compiler5490.swg
#global testerror "Err0103"
var x: int
